--- a/www/wstest.html
+++ b/www/wstest.html
@@ -4,7 +4,8 @@
 
 	<head>
 		<meta charset="utf-8" />
-		<title>MicroWebSocket Test</title>
+		<title>MicroWebSrv2 - WebSockets Module</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 
 	<script language="javascript">
@@ -76,7 +77,7 @@
 	</script>
 
 	<body>
-	  <h2>MicroWebSocket Test :</h2>
+	  <h1>MicroWebSrv2 - WebSockets Module</h1>
 	  <div id="output"></div>
 	</body>
 
