Add a pyhtml test page

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
             <li><a href="test-post">Test a POST form</a></li>
             <li><a href="wstest.html">Test the WebSockets page</a></li>
             <li><a href="wschat.html">Test the multi-users chat page</a></li>
+            <li><a href="test.pyhtml">Test a pyhtml template page</a></li>
         </ul>
         <br />
         <hr />
