--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
             and has been completely redesigned to be much more robust and efficient that its predecessor.<br />
             <br />
             Internal mechanisms works <b>directly at I/O level</b>, are fully asynchronous from end to end, and manages the memory in a highly optimized way.
-            Also, architecture makes its integration very easy and the source code, **MIT licensed**, remains really small.<br />
+            Also, architecture makes its integration very easy and the source code, <b>MIT licensed</b>, remains really small.<br />
             <br />
         </p>
         <ul>
